[gd_scene load_steps=2 format=3 uid="uid://cg3hylang5fxn"]

[ext_resource type="Script" path="res://main.gd" id="1_j0gfq"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("log_label", "geolocation_status_label")]
script = ExtResource("1_j0gfq")
log_label = NodePath("LogLabel")
geolocation_status_label = NodePath("GeolocationStatusLabel")

[node name="PingButton" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 250.0
offset_right = 320.0
offset_bottom = 312.0
text = "Ping"

[node name="PermissionButton" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 378.0
offset_top = 250.0
offset_right = 658.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
text = "Permission"

[node name="StartListeningButton" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 756.0
offset_top = 366.0
offset_right = 1036.0
offset_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Listening"

[node name="StopListeningButton" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 39.0
offset_top = 363.0
offset_right = 319.0
offset_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
text = "Stop Listening"

[node name="HasPermissionButton" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 388.0
offset_top = 364.0
offset_right = 668.0
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 2
text = "Has Permission?"

[node name="LogLabel" type="Label" parent="."]
offset_left = 395.0
offset_top = 79.0
offset_right = 828.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 30
text = "Hello"

[node name="GeolocationStatusLabel" type="Label" parent="."]
offset_left = 339.0
offset_top = 473.0
offset_right = 772.0
offset_bottom = 585.0
theme_override_font_sizes/font_size = 30
text = "Hello"

[connection signal="pressed" from="PingButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PermissionButton" to="." method="_on_permission_button_pressed"]
[connection signal="pressed" from="StartListeningButton" to="." method="_on_start_listening_button_pressed"]
[connection signal="pressed" from="StopListeningButton" to="." method="_on_stop_listening_button_pressed"]
[connection signal="pressed" from="HasPermissionButton" to="." method="_on_has_permission_button_pressed"]
